--- a/main.css
+++ b/main.css
@@ -13,19 +13,29 @@
 
 body {
   font-family: sans-serif, system-ui;
-  margin: 1rem;
+  font-size: 1.5rem;
+  margin: 2rem;
   background-color: var(--c-bg);
   color: var(--c-text);
-  line-height: 1.25rem;
 }
 
-h1 { margin: unset; }
+body > p {
+  max-width: 50rem;
+}
+
+h1 {
+  margin: unset;
+}
 
 a {
   text-decoration: none;
   color: var(--c-accent);
 }
 
-a:hover { opacity: 0.75; }
+a:hover {
+  text-decoration: underline;
+}
 
-.mb1 { margin-bottom: 1rem; }
+.mb1 {
+  margin-bottom: 1rem;
+}
